RESOLVED FIXED118935
fourthTier: String GetByVal out-of-bounds handling is so wrong
https://bugs.webkit.org/show_bug.cgi?id=118935
Summary fourthTier: String GetByVal out-of-bounds handling is so wrong
Filip Pizlo
Reported 2013-07-19 20:52:35 PDT
Patch forthcoming.
Attachments
work in progress (9.09 KB, patch)
2013-07-19 20:53 PDT, Filip Pizlo
no flags
the patch (28.30 KB, patch)
2013-07-19 21:43 PDT, Filip Pizlo
no flags
the patch (31.01 KB, patch)
2013-07-19 22:21 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2013-07-19 20:53:34 PDT
Created attachment 207178 [details] work in progress This adds test, and some test support that I needed, when building them.
Filip Pizlo
Comment 2 2013-07-19 21:43:48 PDT
Created attachment 207180 [details] the patch I'll have -expected files shortly.
Filip Pizlo
Comment 3 2013-07-19 22:21:45 PDT
Created attachment 207185 [details] the patch and now, with tests!
Geoffrey Garen
Comment 4 2013-07-20 09:29:49 PDT
Comment on attachment 207185 [details] the patch JavaScript is the best.
Filip Pizlo
Comment 5 2013-07-20 10:57:56 PDT
Note You need to log in before you can comment on or make changes to this bug.